{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Gameplay",
            "id": "d4684758-64e6-42bf-839b-eb4dc2153bf8",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Value",
                    "id": "76b83862-396f-4493-a898-e5eb742b718b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "df45de37-1a85-4c47-a1f6-292447476009",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "739eb3a9-cb2c-4369-8194-ba84b26dbdf9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Kill",
                    "type": "Button",
                    "id": "5027807a-647a-4c1e-8285-38e261c91b25",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a6f2162b-ddf2-463a-a711-d67fd4a058e6",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "702e699d-8da1-4b97-af3f-de4502c580fd",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ddc64f6-c98b-47b7-9c88-8450a7f42a50",
                    "path": "<HID::Logitech Logitech Extreme 3D>/hat/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Kill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "846ca3f3-c971-43ac-a991-17665fed1c71",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ebd2a90-ebeb-4e9a-b569-c50b08776d03",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c0f5257-d570-4c3c-a2c2-82d791422cbd",
                    "path": "<HID::Logitech Logitech Extreme 3D>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}